# TrackieLLM

./: .gitmodules  CMakeLists.txt  Cargo.toml
.docs/Gpu/: comp.md
.docs/components/: vision.md
.docs/mirror-trad/: requirements.txt
.github/codeql/: code-scanning-config.yml
.github/workflows/: codeql.yml  msvc.yml  rust-clippy.yml
scripts/: configure_build.sh
src/: CMakeLists.txt
src/ai_models/: CMakeLists.txt  Cargo.toml  build.rs  tk_memory_manager.c  tk_memory_manager.h  tk_model_loader.c  tk_model_loader.h  tk_model_loader_private.h  tk_model_runner.h  tk_onnx_runner.c  tk_onnx_runner.h  tk_runner_helpers.c  tk_runner_lifecycle.c  tk_runner_private.h  tk_runner_streaming.c
src/ai_models/grammars/: tool_call.gbnf
src/ai_models/src/: gguf_runner.rs  lib.rs  loader.rs  onnx_runner.rs  tool_manager.rs
src/async_tasks/: Cargo.toml
src/audio/: Cargo.toml
src/cortex/: Cargo.toml
src/deployment/: Cargo.toml
src/event_bus/: Cargo.toml
src/experiments/: Cargo.toml
src/ffi/: Cargo.toml
src/gpu/: CMakeLists.txt
src/integration/: Cargo.toml
src/interaction/: Cargo.toml
src/internal_tools/: Cargo.toml
src/internal_tools/src/: fs_utils.rs  lib.rs
src/logging_ext/: Cargo.toml
src/model_service/: Cargo.toml
src/model_service/src/: lib.rs
src/monitoring/: Cargo.toml
src/navigation/: Cargo.toml
src/networking/: Cargo.toml
src/profiling/: Cargo.toml
src/security/: Cargo.toml
src/sensors/: Cargo.toml
src/utils/: Cargo.toml
src/vision/: Cargo.toml  tk_attribute_classifier.c  tk_attribute_classifier.h  tk_depth_midas.c  tk_image_preprocessor.c  tk_image_preprocessor.h  tk_object_detector.c  tk_object_detector.h  tk_vision_pipeline.c  tk_vision_pipeline.h
src/vision/src/: depth_processing.rs  lib.rs  object_analysis.rs  point_cloud.rs  ransac.rs  scene_graph.rs
src/workers/: Cargo.toml
tests/: CMakeLists.txt  tk_attribute_classifier_test.c  tk_vision_full_test.c
tests/fixtures/regression_1/: ground_truth.json
tests/rust_tests/: Cargo.toml
tests/rust_tests/src/: lib.rs  mock_ffi.rs  model_loading_test.rs  runner_logic_test.rs
