#
# Copyright (C) 2025 TrackieWay-OSS
#
# This file is part of TrackieLLM.
#
# TrackieLLM is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# TrackieLLM is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with TrackieLLM. If not, see <https://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: AGPL-3.0-or-later
#

[package]
name = "trackiellm-ai-models"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TrackieWay-OSS <support-trackway@vy-ai.com>"]
description = "A library for running various AI models, providing a unified interface for formats like GGUF and ONNX."
repository = "https://github.com/TrackieWay-OSS/TrackieLLM"
homepage = "https://vy-ai.com"
readme = "README.md"
keywords = ["ai", "ml", "inference", "onnx", "gguf"]
categories = ["science", "computer-vision", "multimedia::audio"]
build = "build.rs"

[lib]
name = "trackiellm_ai_models"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
candid = "0.10.1"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
trackiellm-internal-tools = { path = "../internal_tools" }
utoipa = { version = "4.2.0", features = ["serde_yaml"] }