#
# Copyright (C) 2025 TrackieWay-OSS
#
# This file is part of TrackieLLM.
#
# TrackieLLM is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# TrackieLLM is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with TrackieLLM. If not, see <https://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: AGPL-3.0-or-later
#

[package]
name = "trackiellm-cortex"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TrackieWay-OSS <support-trackway@vy-ai.com>"]
description = "The central reasoning and orchestration engine for the TrackieLLM application."
repository = "https://github.com/TrackieWay-OSS/TrackieLLM"
homepage = "https://vy-ai.com"
readme = "README.md"
keywords = ["ai", "robotics", "llm", "embedded", "orchestration"]
categories = ["science", "embedded"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
log = "0.4"
once_cell = "1.19"
thiserror = "1.0"
trackiellm-event-bus = { path = "../event_bus" }
trackiellm-ffi = { path = "../ffi" }